--- a/index.html
+++ b/index.html
@@ -27,16 +27,16 @@
     <meta property="og:image" content="govuk_template/assets/images/opengraph-image.png?0.19.2">
 
     <!--[if !IE]><!-->
-<link rel="stylesheet" href="/digitalmarketplace-frontend-toolkit/public/stylesheets/index.css "/>
+<link rel="stylesheet" href="/public/stylesheets/index.css "/>
 <!--<![endif]-->
 <!--[if IE 7]>
-<link rel="stylesheet" href="/digitalmarketplace-frontend-toolkit/public/stylesheets/index-ie7.css "/>
+<link rel="stylesheet" href="/public/stylesheets/index-ie7.css "/>
 <![endif]-->
 <!--[if IE 8]>
-<link rel="stylesheet" href="/digitalmarketplace-frontend-toolkit/public/stylesheets/index-ie8.css "/>
+<link rel="stylesheet" href="/public/stylesheets/index-ie8.css "/>
 <![endif]-->
 <!--[if IE 9]>
-<link rel="stylesheet" href="/digitalmarketplace-frontend-toolkit/public/stylesheets/index-ie9.css "/>
+<link rel="stylesheet" href="/public/stylesheets/index-ie9.css "/>
 <![endif]-->
 
   </head>
@@ -82,7 +82,7 @@
   <div id="wrapper">
     <header class="page-heading page-heading-no-breadcrumb">
       <p class="context">
-        <a class="version-link" href="https://github.com/alphagov/digitalmarketplace-frontend-toolkit/releases/tag/v35.2.1">Version 35.2.1</a>
+        <a class="version-link" href="https://github.com/alphagov/digitalmarketplace-frontend-toolkit/releases/tag/v36.1.1-beta.0">Version 36.1.1-beta.0</a>
       </p>
       <h1>Digital Marketplace frontend toolkit</h1>
     </header>
@@ -193,9 +193,9 @@
 
     <script src="govuk_template/assets/javascripts/govuk-template.js?0.19.2"></script>
 
-    <script type="text/javascript" src="/digitalmarketplace-frontend-toolkit/public/javascripts/vendor/jquery-1.11.0.js"></script>
+    <script type="text/javascript" src="/public/javascripts/vendor/jquery-1.11.0.js"></script>
 
-<script type="text/javascript" src="/digitalmarketplace-frontend-toolkit/public/javascripts/onready.js"></script>
+<script type="text/javascript" src="/public/javascripts/onready.js"></script>
 
 
     
