--- a/summary-table.html
+++ b/summary-table.html
@@ -27,16 +27,16 @@
     <meta property="og:image" content="../govuk_template/assets/images/opengraph-image.png?0.19.2">
 
     <!--[if !IE]><!-->
-<link rel="stylesheet" href="/digitalmarketplace-frontend-toolkit/public/stylesheets/index.css "/>
+<link rel="stylesheet" href="/public/stylesheets/index.css "/>
 <!--<![endif]-->
 <!--[if IE 7]>
-<link rel="stylesheet" href="/digitalmarketplace-frontend-toolkit/public/stylesheets/index-ie7.css "/>
+<link rel="stylesheet" href="/public/stylesheets/index-ie7.css "/>
 <![endif]-->
 <!--[if IE 8]>
-<link rel="stylesheet" href="/digitalmarketplace-frontend-toolkit/public/stylesheets/index-ie8.css "/>
+<link rel="stylesheet" href="/public/stylesheets/index-ie8.css "/>
 <![endif]-->
 <!--[if IE 9]>
-<link rel="stylesheet" href="/digitalmarketplace-frontend-toolkit/public/stylesheets/index-ie9.css "/>
+<link rel="stylesheet" href="/public/stylesheets/index-ie9.css "/>
 <![endif]-->
 
   </head>
@@ -82,7 +82,7 @@
   <nav>
     <ol class="group" role="breadcrumbs">
       <li>
-        <a href="/digitalmarketplace-frontend-toolkit/">Home</a>
+        <a href="/">Home</a>
       </li>
     </ol>
   </nav>
@@ -3835,9 +3835,9 @@
 
     <script src="../govuk_template/assets/javascripts/govuk-template.js?0.19.2"></script>
 
-    <script type="text/javascript" src="/digitalmarketplace-frontend-toolkit/public/javascripts/vendor/jquery-1.11.0.js"></script>
+    <script type="text/javascript" src="/public/javascripts/vendor/jquery-1.11.0.js"></script>
 
-<script type="text/javascript" src="/digitalmarketplace-frontend-toolkit/public/javascripts/onready.js"></script>
+<script type="text/javascript" src="/public/javascripts/onready.js"></script>
 
 
     
